[package]
name = "rustile"
version = "0.1.0"
edition = "2024"

[dependencies]
#Comunicacion con el servidor X 
x11rb = { version = "0.13", features = ["all-extensions", "cursor"]}

#Para manejo de errores limpio
thiserror = "1.0"

#Para registrar los que pasa en el sistema
log = "0.4"
env_logger = "0.11"
xkeysym = "0.2"
