[package]
name = "rustile"
version = "0.0.2"
edition = "2024"
description = "This is a Window Tiling Manager with Rust on x11 for now"
license = "MIT"
readme = "README.md"

[dependencies]
#Comunicacion con el servidor X 
x11rb = { version = "0.13", features = ["all-extensions", "cursor"] }

#Para manejo de errores limpio
thiserror = "1.0"

#Para registrar los que pasa en el sistema
log = "0.4"
env_logger = "0.11"
xkeysym = "0.2"
