[package]
name = "rustile"
version = "0.0.8"
edition = "2024"
description = "This is a Window Tiling Manager with Rust on x11 for now"
license = "MIT"
readme = "README.md"

[lib]
name = "rustile"
path = "src/lib.rs"

[dependencies]
# 🛠️ El framework mágico para crear compositores Wayland
smithay = { version = "0.7.0", features = ["backend_winit", "wayland_frontend", "renderer_gl"]} 

# 📡 Implementación del protocolo Wayland
wayland-server = "0.31.12"

# 🔄 Bucle de eventos (Event Loop) para manejar teclado, ratón y renderizado
calloop = "0.14.4"

# ⌨️ Manejo de teclado (el estándar en Linux)
xkbcommon = "0.9.0"

# 📝 Sistema de logs moderno (reemplaza a log y env_logger)
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Manejo de errores
thiserror = "1.0"